# daily-arXiv-ai-enhanced

./: .gitignore  README.md  index.html  pyproject.toml  run.sh  run_tests.sh
.github/workflows/: crawl.yml  deploy.yml  process.yml  run.yml
ai/: process_batch.py  structure.py  submit_batch.py  system.txt  template.txt  test_data.jsonl  test_results.jsonl
assets/: file-list.txt
css/: styles.css
daily_arxiv/daily_arxiv/: check_stats.py  settings.py
daily_arxiv/daily_arxiv/spiders/: arxiv.py
data/: 2025-08-19.jsonl  2025-08-19.md  2025-08-19_AI_enhanced_Korean.jsonl  2025-08-20.jsonl  2025-08-20.md  2025-08-20_AI_enhanced_Korean.jsonl  2025-08-20_batch_info.json  2025-08-20_batch_requests.jsonl  2025-08-20_batch_submitted.txt  2025-08-21.jsonl  2025-08-21.md  2025-08-21_AI_enhanced_Korean.jsonl  2025-08-21_batch_info.json  2025-08-21_batch_requests.jsonl  2025-08-21_batch_submitted.txt
js/: app.js  statistic.js
tests/: README.md  conftest.py
tests/integration/: test_process_batch.py  test_submit_batch.py
tests/unit/: test_batch_processing_integration.py  test_enhance_with_mock_server.py  test_openai_mock_server.py  test_process_batch_no_fail.py
