[project]
name = "daily-arxiv"
version = "0.1.0"
description = "Daily crawl arXiv papers and use LLMs to summarize them"
authors = [
    {name = "Wei Deng", email = "dw-dengwei@outlook.com"},
    {name = "Jian Guan", email = "jianguanthu@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.1.3",
    "dotenv>=0.9.9",
    "langchain>=0.3.20",
    "langchain-openai>=0.3.9",
    "openai>=1.0.0",
    "scrapy>=2.12.0",
    "tqdm>=4.67.1",
]
license = "Apache-2.0"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
]
